# cbm_power

./: .gitignore  README.md  example_power.py  pyproject.toml  requirements.txt
cbm_power/: __init__.py  config.py  distributions.py  logger.py  optimizer.py  power.py  sample_size.py
docs/: manual.ipynb  manual.md
examples/: example_power.py  example_sample_size.py
